<resources>
    <string name="app_name">Meyaj</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_cuenta">Crea tu cuenta personal</string>
    <string name="strSearch">Qué servicio necesitas?</string>
    <string name="str_queServicioBuscabas">¿Qué servicio buscabas?</string>
    <string name="str_buscar">BUSCAR</string>
    <string name="str_registrarse">REGISTRARSE</string>
    <string name="str_noTienesCuenta">¿No tienes una cuenta?</string>
    <string name="str_iniciaSesion">Iniciar Sesión</string>
    <string name="str_correoElectronico">Correo electrónico</string>
    <string name="str_contrasena">Contraseña</string>
    <string name="strCerca">Cerca de mí</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_ingresar">INGRESAR</string>
    <string name="str_fechaNacimiento">Fecha de nacimiento</string>
    <string name="str_cancelar">CANCELAR</string>
    <string name="str_nombre_usuario">Mario García Lara</string>
    <string name="str_numero_celular">+52 1079 5739</string>
    <string name="str_correo_usuario">mario.garcia@gmail.com</string>
    <string name="strNuevoUsuario">Registrando usuario nuevo</string>
    <string name="strNombre">Nombre:</string>
    <string name="strEdad">Edad:</string>
    <string name="strCorreo">Correo electronico:</string>
    <string name="strOcupacion">Ocupacion:</string>
    <string name="strPassword">Password</string>
    <string name="strRegistrar">Registrar</string>
    <string name="strUsuario">Usuario:</string>
    <string name="strApellido">Apellido</string>
    <string name="Contraseña">str_contraseña</string>
    <string name="str_contraseña">Contraseña</string>
    <string name="str_checkProfesionista">¿Deseas anunciar tus servicios?</string>
    <string name="str_telefono">Teléfono:</string>
    <string name="str_cargando">Cargando...</string>

    <string-array name="my_services">
        <item>Taxi</item>
        <item>Estilista</item>
        <item>Cerrajero</item>
        <item>Plomero</item>
        <item>Mecánico</item>
        <item>Carpintero</item>
        <item>Técnico</item>
        <item>Electricista</item>
        <item>Albañil</item>
        <item>Software</item>
    </string-array>
</resources>
