<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.itesm.cagm.meyaj.PerfilFrag">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/user" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_iniciaSesion"
                android:textAlignment="center"
                android:textColor="#757575" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/str_correoElectronico"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/str_contrasena"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_noTienesCuenta"
                    android:textAlignment="center"
                    android:textColor="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/str_registrarse"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
